Criada a função que permite obter eventos baseados em um usuário
